# easyline

./: CMakeLists.txt  README.md
include/: VariadicToOutputStream.h  easyline.h  factorial.h  my_file_io_funcs.h  utils.h
src/: easyline.cpp  factorial.cpp  main.cpp  my_file_io_funcs.cpp
